--- a/projects/05-moviefinder/src/App.css
+++ b/projects/05-moviefinder/src/App.css
@@ -1,17 +1,44 @@
-.page{
+.page {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  max-width: 800px;
 }
 
 main {
   display: flex;
   justify-content: center;
+  width: 100%;
 }
 
 form {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.movies{
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  margin: 0;
+  padding: 0;
+  gap: 16px;
+  list-style: none;
+}
+
+.movie {
+  text-align: center;
+}
+
+.movie h3, .movie p {
+  padding: 0;
+  margin: 0;
+}
+
+.movie img {
+  border-radius: 8px;
+  margin-top: 16px;
 }
